added how-to-save-jobs... post

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://jabrcx.github.com
-title: jabrcx
+title: "@jabrcx"
 subtitle:
-author: jabrcx
+author: "John A. Brunelle"
 simple_search: http://google.com/search
 description:
 
